Fixed Team collapsing margin
Performance tweaks, hipsum, color vars

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,8 @@
 /** Mostly mobile first design. */
 
 :root {
+    --prim-accent-color: #F97300; /* Orange */
+    --prim-bg-color: #f4f4f4; /* Off white */
     --lite-bg-color: white;
     --navbar-height: 50px;
 }
@@ -23,7 +25,7 @@
 body {
     padding: 0;
     margin: 0;
-    background: #f4f4f4;
+    background: var(--prim-bg-color);
     width: 100%;
 }
 
@@ -43,7 +45,9 @@ h4,
 h5,
 h6,
 a {
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 300;
+    letter-spacing: .1em;
 }
 
 nav {
@@ -53,12 +57,12 @@ nav {
 
 .navbar {
     display: flex;
-    background: #F97300;
+    background: var(--prim-accent-color);
 }
 
 .nav-link,
 .navbar-brand {
-    color: #f4f4f4;
+    color: var(--prim-bg-color);
     cursor: pointer;
 }
 
@@ -76,8 +80,8 @@ nav {
 }
 
 .nav-link:hover {
-    background: #f4f4f4;
-    color: #f97300;
+    background: var(--prim-bg-color);
+    color: var(--prim-accent-color);
 }
 
 .navbar-collapse {
@@ -85,7 +89,7 @@ nav {
 }
 
 .navbar-toggler {
-    background: #f97300 !important;
+    background: var(--prim-accent-color) !important;
 }
 
 ul {
@@ -93,11 +97,11 @@ ul {
 }
 
 .bg-dark {
-    background-color: #f97300!important
+    background-color: var(--prim-accent-color)!important
 }
 
 .bg-primary {
-    background-color: #f4f4f4!important
+    background-color: var(--prim-bg-color)!important
 }
 
 
@@ -143,7 +147,7 @@ ul {
 }
 
 .description h1 {
-    color: #F97300;
+    color: var(--prim-accent-color);
 }
 
 .description p {
@@ -153,8 +157,8 @@ ul {
 }
 
 .description button {
-    border: 1px solid #F97300;
-    background: #F97300;
+    border: 1px solid var(--prim-accent-color);
+    background: var(--prim-accent-color);
     color: #fff;
 }
 
@@ -165,7 +169,7 @@ ul {
 }
 
 .about h1 {
-    color: #F97300;
+    color: var(--prim-accent-color);
     margin: 2em;
 }
 
@@ -205,7 +209,7 @@ ul {
 }
 
 .portfolio h1 {
-    color: #F97300;
+    color: var(--prim-accent-color);
     margin: 2em;
 }
 
@@ -229,7 +233,7 @@ ul {
 }
 
 .blog h1 {
-    color: #F97300;
+    color: var(--prim-accent-color);
     margin: 2em;
 }
 
@@ -245,7 +249,7 @@ ul {
 }
 
 .blog .card-title {
-    color: #F97300;
+    color: var(--prim-accent-color);
 }
 
 .blog .card-body {
@@ -259,10 +263,11 @@ ul {
     margin: 3em 0;
     padding-bottom: 1em;
     position: relative;
+    border: 1px solid var(--prim-bg-color);
 }
 
 .team h1 {
-    color: #F97300;
+    color: var(--prim-accent-color);
     margin: 2em;
 }
 
@@ -301,7 +306,7 @@ form {
 
 .contact-form h1 {
     padding: 2em 1px;
-    color: #F97300;
+    color: var(--prim-accent-color);
 }
 
 .contact-form .right {
@@ -309,7 +314,7 @@ form {
 }
 
 .contact-form .right .btn-secondary {
-    background: #F97300;
+    background: var(--prim-accent-color);
     color: #fff;
     border: 0;
 }
